src/scss/common.scss
$family-sans-serif: 'Noto Sans', system-ui -apple-system, BlinkMacSystemFont,
  'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
  'Segoe UI Emoji', 'Segoe UI Symbol';

$primary: #e32219;
$link: #1a3283;

$sideTabs-background: white;
$sideTabs-color: black;
$sideTabs-active: $primary;

// @import '~bulma/sass/utilities/_all.sass';
@import '~@openlab/deconf-ui-toolkit/dist/common.scss';

//
// LEGACY mixins
//

// @mixin insetInlineStart($value) {
//   &:dir(ltr) {
//     left: $value;
//   }
//   &:dir(rtl) {
//     right: $value;
//   }
// }

// @mixin insetInlineEnd($value) {
//   &:dir(ltr) {
//     right: $value;
//   }
//   &:dir(rtl) {
//     left: $value;
//   }
// }

// @mixin appPageFlexFillChild() {
//   position: absolute;
//   left: 0;
//   right: 0;
//   bottom: 0;
//   top: 0;

//   display: flex;
//   flex-direction: column;
// }

